--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.6.0",
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
-    "react-gsap": "^3.2.1",
-    "gsap": "^3.10.4"
+    "gsap": "^3.10.4",
+    "react-gsap": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
