--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.6.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "store": "^2.0.12"
   },
   "devDependencies": {
     "gsap": "^3.10.4",
